# MVC-DevOps

./: .gitignore  README.md  compose.yml
.github/workflows/: deploy_api.yml  deploy_backend.yml  deploy_db.yml  get_ansible_vault_password.yml  get_vault_password.yml  test_github_actions.yml
MVC-DevOps/: .gitignore  Dockerfile  compose.yml
MVC-DevOps/CI CD/: Dockerfile
MVC-DevOps/CI-CD/: CMakeLists.txt  Dockerfile  main.cpp
MVC-DevOps/CI-CD/API/: CMakeLists.txt  Dockerfile  config.json  main.cpp
MVC-DevOps/CI-CD/PostgreSQL/: Dockerfile  tempDB.txt
MVC-DevOps/ansible/: ansible.cfg  hosts  playbook.yml  vault.yml
MVC-DevOps/ansible/roles/create_user/tasks/: main.yml
MVC-DevOps/ansible/roles/deploy_runner/tasks/: main.yml
MVC-DevOps/ansible/roles/install_docker/tasks/: main.yml
MVC-DevOps/ansible/roles/manage_files/tasks/: main.yml
MVC-DevOps/monitoring/: blackbox.yml  data_sources.yml  docker-compose.yml  nginx.conf  prometheus.yml
ansible/: playbook.yml  vault.yml
ansible/roles/deploy_runner/tasks/: main.yml
ansible/roles/install_docker/tasks/: main.yml
ansible/roles/manage_files/tasks/: main.yml
